--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,23 @@
+html, body{
+    height: 100%;
+  }
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+
 .box
 {
     border: 2px solid black ;
     width: 500px;
     height: 500;
-    margin-top: 170px;
     text-align: center;
-    margin-left:350px;
     background-color: white;
     border-radius: 10px;
     border-color: rgb(201, 165, 201);  /* here */
+    
 }
 
 .textbx
