--- a/questions.css
+++ b/questions.css
@@ -19,6 +19,17 @@ body{
 	background-color: rgb(139, 78, 139); 
 	cursor: pointer;
 }
+#secTopNav{
+	margin-top: 30px;
+}
+#UserName{
+	float: left;
+	font-size: 25px;
+}
+.SecNav{
+	float: left;
+	padding: 10px;
+}
 #timer{
 	background-color: rgb(201, 165, 201);
 	border: none;
@@ -26,9 +37,10 @@ body{
 	border-bottom: 5px solid black;
 	border-radius: 16px;
 	margin: 5px;
-	margin-left: 16%;
+	margin-left: 33%;
 	padding: 5px;
 	width: 120px;
+	height: 35px;
 	text-align: center;
 	font-size: 25px;
 }
@@ -38,39 +50,28 @@ body{
 #timer:focus{
 	outline: none;
 }
+#signout{
+	width: 30px;
+	height: 30px;
+	float: right;
+	margin-right: 20px;
+}
 #center{
+	text-align: center;
 	background-color: white;
 	border-radius: 12px;
-	margin:10% 10%;
-	height: 300px;
+	margin:5% 10%;
+	height: 400px;
     box-shadow: 5px 5px 30px 15px rgb(139, 78, 139);
 }
 #questions{
-	font-size: 18px;
+	font-size: 30px;
 	margin: 5px;
 	margin-bottom: 10px;
 }
-#leftSlide{
-	float: left;
-	font-size:  20px;
-	margin: 20px;
-}
-.slidebtn{
-	border: none;
-	width: 50px;
-	height: 140px;
-	background-color: rgb(170, 104, 170);
-}
-#rightSlide{
-	float: right;
-	font-size:  20px;
-	margin: 20px;
-}
-.slidebtn:hover{
-	cursor: pointer;
-	background-color: rgb(139, 78, 139); 
-}
-#audio{
+#AudBtn{
+	width: 30px;
+	height: 30px;
 	float:right;
 }
 .aBox{
@@ -85,14 +86,24 @@ body{
 }
 #questionBox{
 	margin: 10px;
-	padding: 8px;
+	padding: 5px;
 }
 #options{
-	margin: 30px 100px;
-	height: 120px;
+	margin: 0px 150px;
+	height: 100px;
 }
 .leftOP{
 	margin:15px 5px;
+	width: 250px;
+	height: 40px;
+	font-size: 22px;
+	border: none;
+	background-color: rgb(201, 165, 201);
+	border-radius: 20px;
+}
+.leftOP:hover{
+	cursor: pointer;
+	background-color: rgb(139, 78, 139);
 }
 #rightOptions{
 	float: right;
@@ -105,23 +116,25 @@ body{
 	margin: 10px;
 }
 .navBox{
-	background-color: white;
+	background-color:rgb(201, 165, 201);
 	border-radius:12px ;
 	width: fit-content;
 	height: fit-content;
-	padding: 10px;
-	margin-left:35%;
-	vertical-align: bottom;
-	float: left	;
+	margin-left:25%;
 }
 .bnav{
 	float: left;
-	border: 1px solid black;
+	text-align: center;
+	border: 1px solid rgb(139, 78, 139);
+	border-radius: 12px;
 	padding: 5px;
 	margin: 5px;
 	font-size: 28px;
+	background-color: rgb(201, 165, 201);
+	width: 50px;
 }
+
 .bnav:hover{
-	background-color: lightgray;
+	background-color: rgb(139, 78, 139);
 	cursor: pointer;
 }
