--- a/level.css
+++ b/level.css
@@ -1,10 +1,6 @@
-body
-{
 
-}
 section
 {
-    background-color: rgb(39, 15, 61);
     border-radius: 10px solid rgb(194, 29, 29);
     display: flex;
     align-items: center;
@@ -14,7 +10,7 @@ section
 }
 .paper
 {
-    background-color: blueviolet;
+    background-color: white;
     border: blueviolet;
     border-radius: 10px;
     height: 400px;
@@ -32,9 +28,16 @@ button
 {
     width: 300px;
     height: 50px;
-    border-radius: 30px;
     font-size: 20px;
-    border: 1px solid;
-    padding: 1px;
-    box-shadow: 1px 3px 5px 5px rgb(39, 15, 61);
+    padding: 1px;  
+    border-radius: 10px;
+    background-color: rgb(170, 104, 170);  /* here */
+    color: white;
+    font-weight: 800;
+    border:hidden;  
+}
+button:hover
+{
+    background-color: rgb(139, 78, 139); 
+    cursor: pointer;
 }
