--- a/level.css
+++ b/level.css
@@ -30,14 +30,14 @@ button
     font-size: 20px;
     padding: 1px;  
     border-radius: 10px;
-    background-color: rgb(170, 104, 170);  /* here */
+    background-color: #3F485B;  /* here */
     color: white;
     font-weight: 800;
     border:hidden;  
 }
 button:hover
 {
-    background-color: rgb(139, 78, 139); 
+    background-color: #395aa0; 
     cursor: pointer;
 }
 
@@ -53,7 +53,7 @@ button:hover
 }
 
 .topn:hover {
-    background-color: rgb(139, 78, 139);
+    background-color: #6a8dd8;
     cursor: pointer;
     border-radius: 10px;
     color: white;
