--- a/information.css
+++ b/information.css
@@ -4,11 +4,13 @@
     border-radius: 10px;
     color: white;
 }
+
+
 /* body{
     background-color: #11a2a7;
 } */
+
 .topn {
-           
     float: left;
     padding: 5px;
     text-align: center;
@@ -18,31 +20,38 @@
     font-weight: 100;
     margin-top: 2px;
 }
-h1{
+
+h1 {
     font-size: 50px;
     text-align: center;
 }
-header{
+
+header {
     margin-top: 3%;
 }
-h2{
+
+h2 {
     font-size: 40px;
 }
-p{
+
+p {
     font-size: 25px;
-    word-wrap:break-word;
+    word-wrap: break-word;
     /* margin-left: 5px; */
-    text-align:justify;
+    text-align: justify;
 }
-section{
+
+section {
     margin-left: 2%;
-    margin-right:2% ;
+    margin-right: 2%;
 }
-img{
+
+img {
     width: 50%;
     margin-left: 2%;
- }
-iframe{
+}
+
+iframe {
     margin-left: 5%;
     margin-bottom: 3%;
     width: 40%;
@@ -50,77 +59,93 @@ iframe{
 }
 
 nav {
-	margin: 15
-    
-    px auto 0;
-	position: relative;
-	width: 100%;
-	height: 50px;
-	background-color: #34495e;
-	border-radius: 8px;
-	font-size: 0;
+    margin: 15 px auto 0;
+    position: relative;
+    width: 100%;
+    height: 50px;
+    background-color: #34495e;
+    border-radius: 8px;
+    font-size: 0;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
 nav a {
-	line-height: 50px;
-	height: 100%;
-	font-size: 15px;
-	display: inline-block;
-	position: relative;
-	z-index: 1;
-	text-decoration: none;
-	text-transform: uppercase;
-	text-align: center;
-	color: white;
-	cursor: pointer;
+    line-height: 50px;
+    height: 100%;
+    font-size: 15px;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    color: white;
+    cursor: pointer;
 }
+
 nav .animation {
-	position: absolute;
-	height: 100%;
-	top: 0;
-	z-index: 0;
-	transition: all .5s ease 0s;
-	border-radius: 8px;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    z-index: 0;
+    transition: all .5s ease 0s;
+    border-radius: 8px;
 }
+
 a:nth-child(1) {
-	width: 100px;
+    width: 100px;
 }
+
 a:nth-child(2) {
-	width: 110px;
+    width: 110px;
 }
+
 a:nth-child(3) {
-	width: 100px;
+    width: 100px;
 }
+
 a:nth-child(4) {
-	width: 160px;
+    width: 160px;
 }
+
 a:nth-child(5) {
-	width: 120px;
+    width: 120px;
 }
-nav .start-home, a:nth-child(1):hover~.animation {
-	width: 100px;
-	left: 0;
-	background-color: #1abc9c;
+
+nav .start-home,
+a:nth-child(1):hover~.animation {
+    width: 100px;
+    left: 0;
+    background-color: #1abc9c;
 }
-nav .start-about, a:nth-child(2):hover~.animation {
-	width: 110px;
-	left: 100px;
-	background-color: #e74c3c;
+
+nav .start-about,
+a:nth-child(2):hover~.animation {
+    width: 110px;
+    left: 100px;
+    background-color: #e74c3c;
 }
-nav .start-blog, a:nth-child(3):hover~.animation {
-	width: 100px;
-	left: 210px;
-	background-color: #3498db;
+
+nav .start-blog,
+a:nth-child(3):hover~.animation {
+    width: 100px;
+    left: 210px;
+    background-color: #3498db;
 }
-nav .start-portefolio, a:nth-child(4):hover~.animation {
-	width: 160px;
-	left: 310px;
-	background-color: #9b59b6;
+
+nav .start-portefolio,
+a:nth-child(4):hover~.animation {
+    width: 160px;
+    left: 310px;
+    background-color: #9b59b6;
 }
-nav .start-contact, a:nth-child(5):hover~.animation {
-	width: 120px;
-	left: 470px;
-	background-color: #e67e22;
+
+nav .start-contact,
+a:nth-child(5):hover~.animation {
+    width: 120px;
+    left: 470px;
+    background-color: #e67e22;
 }
+
 
 /* END -  NAVBAR */
